modified yaml file

--- a/day-3/exercises/k8s/ateam-mp-svc.yaml
+++ b/day-3/exercises/k8s/ateam-mp-svc.yaml
@@ -32,7 +32,7 @@ spec:
                 version: v1
         spec:
             containers:
-                - image: {<github-acct>/image-name}:{tag}
+                - image: {<dockerhub-acct>/image-name}:{tag}
                   imagePullPolicy: Always
                   name: welcome
                   ports:
